--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -51,10 +52,10 @@
     ]
   },
   "lint-staged": {
-     "src/**/*.{ts,tsx,json,css,scss,md}": [
-       "prettier --write"
-     ]
-   },
+    "src/**/*.{ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -70,6 +71,7 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.13",
     "@types/react": "^17.0.16",
