--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -17,7 +17,6 @@ jobs:
           yarn build
       - name: run Lighthouse CI
         run: |
-          yarn global add @lhci/cli@0.8.x
-          lhci autorun
+          yarn dlx -p @lhci/cli@0.8.x lhci autorun
         env:
           LHCI_GITHUB_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
