ci(lighthouse): 👷 lhci 토큰 변수명 수정

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -19,4 +19,4 @@ jobs:
         run: |
           yarn dlx -p @lhci/cli@0.8.x lhci autorun
         env:
-          LHCI_GITHUB_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
