ci(lighthouse): 👷 lhci 실행 이벤트 추가

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,5 +1,11 @@
 name: lighthouse-ci
-on: [push]
+on:
+  push:
+    paths:
+      - "src/**"
+      - package.json
+  pull_request:
+    types: [opened]
 jobs:
   lhci:
     name: Lighthouse
