--- a/package.json
+++ b/package.json
@@ -49,8 +49,18 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
-    ]
+      "react-app/jest",
+      "airbnb-typescript",
+      "plugin:prettier/recommended"
+    ],
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "settings": {
+      "import/resolver": {
+        "typescript": {}
+      }
+    }
   },
   "lint-staged": {
     "src/**/*.{ts,tsx,json,css,scss,md}": [
@@ -80,7 +90,11 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/testing-library__jest-dom": "^5.14.1",
     "devmoji": "^2.3.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
     "pinst": "^2.1.6",
