--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/user-event": "^13.2.1",
     "clsx": "^1.1.1",
     "http-proxy-middleware": "^2.0.1",
+    "jotai": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
