--- a/package.json
+++ b/package.json
@@ -24,29 +24,35 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.3",
+    "@material-ui/icons": "^5.0.0-beta.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "clsx": "^1.1.1",
     "http-proxy-middleware": "^2.0.1",
     "jotai": "^1.3.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^2.1.0",
-    "workbox-background-sync": "^6.2.2",
-    "workbox-broadcast-update": "^6.2.2",
-    "workbox-cacheable-response": "^6.2.2",
-    "workbox-core": "^6.2.2",
-    "workbox-expiration": "^6.2.2",
-    "workbox-google-analytics": "^6.2.2",
-    "workbox-navigation-preload": "^6.2.2",
-    "workbox-precaching": "^6.2.2",
-    "workbox-range-requests": "^6.2.2",
-    "workbox-routing": "^6.2.2",
-    "workbox-strategies": "^6.2.2",
-    "workbox-streams": "^6.2.2"
+    "workbox-background-sync": "^6.2.3",
+    "workbox-broadcast-update": "^6.2.3",
+    "workbox-cacheable-response": "^6.2.3",
+    "workbox-core": "^6.2.3",
+    "workbox-expiration": "^6.2.3",
+    "workbox-google-analytics": "^6.2.3",
+    "workbox-navigation-preload": "^6.2.3",
+    "workbox-precaching": "^6.2.3",
+    "workbox-range-requests": "^6.2.3",
+    "workbox-routing": "^6.2.3",
+    "workbox-strategies": "^6.2.3",
+    "workbox-streams": "^6.2.3"
   },
   "eslintConfig": {
     "extends": [
@@ -69,25 +75,19 @@
       "prettier --write"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.0",
+    "@types/leaflet": "^1.7.4",
     "@types/node": "^16.4.13",
-    "@types/react": "^17.0.16",
+    "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "@types/testing-library__jest-dom": "^5.14.1",
