--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-leaflet": "^3.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.4.0",
     "web-vitals": "^2.1.0",
     "workbox-background-sync": "^6.2.3",
     "workbox-broadcast-update": "^6.2.3",
