--- a/package.json
+++ b/package.json
@@ -110,5 +110,6 @@
     "sass": "^1.43.5",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.3.5"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
