--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=14"
+    "node": "16"
   },
   "scripts": {
     "postinstall": "husky install",
@@ -24,36 +24,35 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^5.0.0-beta.4",
     "@material-ui/icons": "^5.0.0-beta.4",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.1.1",
     "http-proxy-middleware": "^2.0.1",
-    "jotai": "^1.3.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^3.2.1",
-    "react-router-dom": "^5.2.0",
+    "react-leaflet": "^3.2.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "recoil": "^0.4.0",
-    "web-vitals": "^2.1.0",
-    "workbox-background-sync": "^6.2.4",
-    "workbox-broadcast-update": "^6.2.4",
-    "workbox-cacheable-response": "^6.2.4",
-    "workbox-core": "^6.2.4",
-    "workbox-expiration": "^6.2.4",
-    "workbox-google-analytics": "^6.2.4",
-    "workbox-navigation-preload": "^6.2.4",
-    "workbox-precaching": "^6.2.4",
-    "workbox-range-requests": "^6.2.4",
-    "workbox-routing": "^6.2.4",
-    "workbox-strategies": "^6.2.4",
-    "workbox-streams": "^6.2.4"
+    "recoil": "^0.5.2",
+    "web-vitals": "^2.1.2",
+    "workbox-background-sync": "^6.4.1",
+    "workbox-broadcast-update": "^6.4.1",
+    "workbox-cacheable-response": "^6.4.1",
+    "workbox-core": "^6.4.1",
+    "workbox-expiration": "^6.4.1",
+    "workbox-google-analytics": "^6.4.1",
+    "workbox-navigation-preload": "^6.4.1",
+    "workbox-precaching": "^6.4.1",
+    "workbox-range-requests": "^6.4.1",
+    "workbox-routing": "^6.4.1",
+    "workbox-strategies": "^6.4.1",
+    "workbox-streams": "^6.4.1"
   },
   "eslintConfig": {
     "extends": [
