--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^5.0.0-beta.4",
-    "@material-ui/icons": "^5.0.0-beta.4",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.1",
+    "@mui/system": "^5.2.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
